y.output
   0  $accept : doc $end

   1  doc : INTRO_XML INTRO_DOC book

   2  book : TAG_OPEN BOOK edition TAG_CLOSE content CLOSE_TAG_OPEN BOOK TAG_CLOSE

   3  edition :
   4          | EDITION ATT_SEPARATOR VALUE

   5  content : dedication preface parts author_notes
   6          | preface parts author_notes

   7  dedication : TAG_OPEN DEDICATION TAG_CLOSE pcdata CLOSE_TAG_OPEN DEDICATION TAG_CLOSE

   8  pcdata : CONTENT

   9  preface : TAG_OPEN PREFACE TAG_CLOSE pcdata CLOSE_TAG_OPEN PREFACE TAG_CLOSE

  10  parts : part
  11        | parts part

  12  part : TAG_OPEN PART id title TAG_CLOSE part_cont CLOSE_TAG_OPEN PART TAG_CLOSE
  13       | TAG_OPEN PART id TAG_CLOSE part_cont CLOSE_TAG_OPEN PART TAG_CLOSE

  14  part_cont : toc chapters lof_lot

  15  lof_lot :
  16          | lof lot
  17          | lot
  18          | lof

  19  id : ID ATT_SEPARATOR VALUE

  20  title : TITLE ATT_SEPARATOR VALUE

  21  toc : TAG_OPEN TOC TAG_CLOSE items CLOSE_TAG_OPEN TOC TAG_CLOSE

  22  items : item
  23        | items item

  24  item : TAG_OPEN ITEM id_ref TAG_CLOSE pcdata CLOSE_TAG_OPEN ITEM TAG_CLOSE

  25  id_ref : ID ATT_SEPARATOR VALUE

  26  chapters : chapter
  27           | chapters chapter

  28  chapter : TAG_OPEN CHAPTER id title TAG_CLOSE sections CLOSE_TAG_OPEN CHAPTER TAG_CLOSE

  29  sections : section
  30           | sections section

  31  section : TAG_OPEN SECTION id title TAG_CLOSE section_content CLOSE_TAG_OPEN SECTION TAG_CLOSE

  32  section_content : section_content pcdata
  33                  | section_content section
  34                  | section_content figure
  35                  | section_content table
  36                  | pcdata
  37                  | section
  38                  | figure
  39                  | table

  40  figure : TAG_OPEN FIGURE id caption path CLOSE_TAG_CLOSE

  41  caption : CAPTION ATT_SEPARATOR VALUE

  42  path :
  43       | PATH ATT_SEPARATOR VALUE

  44  table : TAG_OPEN TABLE id caption TAG_CLOSE rows CLOSE_TAG_OPEN TABLE TAG_CLOSE

  45  rows : row
  46       | rows row

  47  row : TAG_OPEN ROW TAG_CLOSE cells CLOSE_TAG_OPEN ROW TAG_CLOSE

  48  cells : cell
  49        | cells cell

  50  cell : TAG_OPEN CELL TAG_CLOSE pcdata CLOSE_TAG_OPEN CELL TAG_CLOSE

  51  lof : TAG_OPEN LOF TAG_CLOSE items CLOSE_TAG_OPEN LOF TAG_CLOSE

  52  lot : TAG_OPEN LOT TAG_CLOSE items CLOSE_TAG_OPEN LOT TAG_CLOSE

  53  author_notes :
  54               | TAG_OPEN AUTHOR_NOTES TAG_CLOSE notes CLOSE_TAG_OPEN AUTHOR_NOTES TAG_CLOSE

  55  notes : note
  56        | notes note

  57  note : TAG_OPEN NOTE TAG_CLOSE pcdata CLOSE_TAG_OPEN NOTE TAG_CLOSE

state 0
	$accept : . doc $end  (0)

	INTRO_XML  shift 1
	.  error

	doc  goto 2


state 1
	doc : INTRO_XML . INTRO_DOC book  (1)

	INTRO_DOC  shift 3
	.  error


state 2
	$accept : doc . $end  (0)

	$end  accept


state 3
	doc : INTRO_XML INTRO_DOC . book  (1)

	TAG_OPEN  shift 4
	.  error

	book  goto 5


state 4
	book : TAG_OPEN . BOOK edition TAG_CLOSE content CLOSE_TAG_OPEN BOOK TAG_CLOSE  (2)

	BOOK  shift 6
	.  error


state 5
	doc : INTRO_XML INTRO_DOC book .  (1)

	.  reduce 1


state 6
	book : TAG_OPEN BOOK . edition TAG_CLOSE content CLOSE_TAG_OPEN BOOK TAG_CLOSE  (2)
	edition : .  (3)

	EDITION  shift 7
	TAG_CLOSE  reduce 3

	edition  goto 8


state 7
	edition : EDITION . ATT_SEPARATOR VALUE  (4)

	ATT_SEPARATOR  shift 9
	.  error


state 8
	book : TAG_OPEN BOOK edition . TAG_CLOSE content CLOSE_TAG_OPEN BOOK TAG_CLOSE  (2)

	TAG_CLOSE  shift 10
	.  error


state 9
	edition : EDITION ATT_SEPARATOR . VALUE  (4)

	VALUE  shift 11
	.  error


state 10
	book : TAG_OPEN BOOK edition TAG_CLOSE . content CLOSE_TAG_OPEN BOOK TAG_CLOSE  (2)

	TAG_OPEN  shift 12
	.  error

	content  goto 13
	dedication  goto 14
	preface  goto 15


state 11
	edition : EDITION ATT_SEPARATOR VALUE .  (4)

	.  reduce 4


state 12
	dedication : TAG_OPEN . DEDICATION TAG_CLOSE pcdata CLOSE_TAG_OPEN DEDICATION TAG_CLOSE  (7)
	preface : TAG_OPEN . PREFACE TAG_CLOSE pcdata CLOSE_TAG_OPEN PREFACE TAG_CLOSE  (9)

	DEDICATION  shift 16
	PREFACE  shift 17
	.  error


state 13
	book : TAG_OPEN BOOK edition TAG_CLOSE content . CLOSE_TAG_OPEN BOOK TAG_CLOSE  (2)

	CLOSE_TAG_OPEN  shift 18
	.  error


state 14
	content : dedication . preface parts author_notes  (5)

	TAG_OPEN  shift 19
	.  error

	preface  goto 20


state 15
	content : preface . parts author_notes  (6)

	TAG_OPEN  shift 21
	.  error

	part  goto 22
	parts  goto 23


state 16
	dedication : TAG_OPEN DEDICATION . TAG_CLOSE pcdata CLOSE_TAG_OPEN DEDICATION TAG_CLOSE  (7)

	TAG_CLOSE  shift 24
	.  error


state 17
	preface : TAG_OPEN PREFACE . TAG_CLOSE pcdata CLOSE_TAG_OPEN PREFACE TAG_CLOSE  (9)

	TAG_CLOSE  shift 25
	.  error


state 18
	book : TAG_OPEN BOOK edition TAG_CLOSE content CLOSE_TAG_OPEN . BOOK TAG_CLOSE  (2)

	BOOK  shift 26
	.  error


state 19
	preface : TAG_OPEN . PREFACE TAG_CLOSE pcdata CLOSE_TAG_OPEN PREFACE TAG_CLOSE  (9)

	PREFACE  shift 17
	.  error


state 20
	content : dedication preface . parts author_notes  (5)

	TAG_OPEN  shift 21
	.  error

	part  goto 22
	parts  goto 27


state 21
	part : TAG_OPEN . PART id title TAG_CLOSE part_cont CLOSE_TAG_OPEN PART TAG_CLOSE  (12)
	part : TAG_OPEN . PART id TAG_CLOSE part_cont CLOSE_TAG_OPEN PART TAG_CLOSE  (13)

	PART  shift 28
	.  error


state 22
	parts : part .  (10)

	.  reduce 10


state 23
	content : preface parts . author_notes  (6)
	parts : parts . part  (11)
	author_notes : .  (53)

	TAG_OPEN  shift 29
	CLOSE_TAG_OPEN  reduce 53

	part  goto 30
	author_notes  goto 31


state 24
	dedication : TAG_OPEN DEDICATION TAG_CLOSE . pcdata CLOSE_TAG_OPEN DEDICATION TAG_CLOSE  (7)

	CONTENT  shift 32
	.  error

	pcdata  goto 33


state 25
	preface : TAG_OPEN PREFACE TAG_CLOSE . pcdata CLOSE_TAG_OPEN PREFACE TAG_CLOSE  (9)

	CONTENT  shift 32
	.  error

	pcdata  goto 34


state 26
	book : TAG_OPEN BOOK edition TAG_CLOSE content CLOSE_TAG_OPEN BOOK . TAG_CLOSE  (2)

	TAG_CLOSE  shift 35
	.  error


state 27
	content : dedication preface parts . author_notes  (5)
	parts : parts . part  (11)
	author_notes : .  (53)

	TAG_OPEN  shift 29
	CLOSE_TAG_OPEN  reduce 53

	part  goto 30
	author_notes  goto 36


state 28
	part : TAG_OPEN PART . id title TAG_CLOSE part_cont CLOSE_TAG_OPEN PART TAG_CLOSE  (12)
	part : TAG_OPEN PART . id TAG_CLOSE part_cont CLOSE_TAG_OPEN PART TAG_CLOSE  (13)

	ID  shift 37
	.  error

	id  goto 38


state 29
	part : TAG_OPEN . PART id title TAG_CLOSE part_cont CLOSE_TAG_OPEN PART TAG_CLOSE  (12)
	part : TAG_OPEN . PART id TAG_CLOSE part_cont CLOSE_TAG_OPEN PART TAG_CLOSE  (13)
	author_notes : TAG_OPEN . AUTHOR_NOTES TAG_CLOSE notes CLOSE_TAG_OPEN AUTHOR_NOTES TAG_CLOSE  (54)

	PART  shift 28
	AUTHOR_NOTES  shift 39
	.  error


state 30
	parts : parts part .  (11)

	.  reduce 11


state 31
	content : preface parts author_notes .  (6)

	.  reduce 6


state 32
	pcdata : CONTENT .  (8)

	.  reduce 8


state 33
	dedication : TAG_OPEN DEDICATION TAG_CLOSE pcdata . CLOSE_TAG_OPEN DEDICATION TAG_CLOSE  (7)

	CLOSE_TAG_OPEN  shift 40
	.  error


state 34
	preface : TAG_OPEN PREFACE TAG_CLOSE pcdata . CLOSE_TAG_OPEN PREFACE TAG_CLOSE  (9)

	CLOSE_TAG_OPEN  shift 41
	.  error


state 35
	book : TAG_OPEN BOOK edition TAG_CLOSE content CLOSE_TAG_OPEN BOOK TAG_CLOSE .  (2)

	.  reduce 2


state 36
	content : dedication preface parts author_notes .  (5)

	.  reduce 5


state 37
	id : ID . ATT_SEPARATOR VALUE  (19)

	ATT_SEPARATOR  shift 42
	.  error


state 38
	part : TAG_OPEN PART id . title TAG_CLOSE part_cont CLOSE_TAG_OPEN PART TAG_CLOSE  (12)
	part : TAG_OPEN PART id . TAG_CLOSE part_cont CLOSE_TAG_OPEN PART TAG_CLOSE  (13)

	TITLE  shift 43
	TAG_CLOSE  shift 44
	.  error

	title  goto 45


state 39
	author_notes : TAG_OPEN AUTHOR_NOTES . TAG_CLOSE notes CLOSE_TAG_OPEN AUTHOR_NOTES TAG_CLOSE  (54)

	TAG_CLOSE  shift 46
	.  error


state 40
	dedication : TAG_OPEN DEDICATION TAG_CLOSE pcdata CLOSE_TAG_OPEN . DEDICATION TAG_CLOSE  (7)

	DEDICATION  shift 47
	.  error


state 41
	preface : TAG_OPEN PREFACE TAG_CLOSE pcdata CLOSE_TAG_OPEN . PREFACE TAG_CLOSE  (9)

	PREFACE  shift 48
	.  error


state 42
	id : ID ATT_SEPARATOR . VALUE  (19)

	VALUE  shift 49
	.  error


state 43
	title : TITLE . ATT_SEPARATOR VALUE  (20)

	ATT_SEPARATOR  shift 50
	.  error


state 44
	part : TAG_OPEN PART id TAG_CLOSE . part_cont CLOSE_TAG_OPEN PART TAG_CLOSE  (13)

	TAG_OPEN  shift 51
	.  error

	toc  goto 52
	part_cont  goto 53


state 45
	part : TAG_OPEN PART id title . TAG_CLOSE part_cont CLOSE_TAG_OPEN PART TAG_CLOSE  (12)

	TAG_CLOSE  shift 54
	.  error


state 46
	author_notes : TAG_OPEN AUTHOR_NOTES TAG_CLOSE . notes CLOSE_TAG_OPEN AUTHOR_NOTES TAG_CLOSE  (54)

	TAG_OPEN  shift 55
	.  error

	note  goto 56
	notes  goto 57


state 47
	dedication : TAG_OPEN DEDICATION TAG_CLOSE pcdata CLOSE_TAG_OPEN DEDICATION . TAG_CLOSE  (7)

	TAG_CLOSE  shift 58
	.  error


state 48
	preface : TAG_OPEN PREFACE TAG_CLOSE pcdata CLOSE_TAG_OPEN PREFACE . TAG_CLOSE  (9)

	TAG_CLOSE  shift 59
	.  error


state 49
	id : ID ATT_SEPARATOR VALUE .  (19)

	.  reduce 19


state 50
	title : TITLE ATT_SEPARATOR . VALUE  (20)

	VALUE  shift 60
	.  error


state 51
	toc : TAG_OPEN . TOC TAG_CLOSE items CLOSE_TAG_OPEN TOC TAG_CLOSE  (21)

	TOC  shift 61
	.  error


state 52
	part_cont : toc . chapters lof_lot  (14)

	TAG_OPEN  shift 62
	.  error

	chapter  goto 63
	chapters  goto 64


state 53
	part : TAG_OPEN PART id TAG_CLOSE part_cont . CLOSE_TAG_OPEN PART TAG_CLOSE  (13)

	CLOSE_TAG_OPEN  shift 65
	.  error


state 54
	part : TAG_OPEN PART id title TAG_CLOSE . part_cont CLOSE_TAG_OPEN PART TAG_CLOSE  (12)

	TAG_OPEN  shift 51
	.  error

	toc  goto 52
	part_cont  goto 66


state 55
	note : TAG_OPEN . NOTE TAG_CLOSE pcdata CLOSE_TAG_OPEN NOTE TAG_CLOSE  (57)

	NOTE  shift 67
	.  error


state 56
	notes : note .  (55)

	.  reduce 55


state 57
	author_notes : TAG_OPEN AUTHOR_NOTES TAG_CLOSE notes . CLOSE_TAG_OPEN AUTHOR_NOTES TAG_CLOSE  (54)
	notes : notes . note  (56)

	TAG_OPEN  shift 55
	CLOSE_TAG_OPEN  shift 68
	.  error

	note  goto 69


state 58
	dedication : TAG_OPEN DEDICATION TAG_CLOSE pcdata CLOSE_TAG_OPEN DEDICATION TAG_CLOSE .  (7)

	.  reduce 7


state 59
	preface : TAG_OPEN PREFACE TAG_CLOSE pcdata CLOSE_TAG_OPEN PREFACE TAG_CLOSE .  (9)

	.  reduce 9


state 60
	title : TITLE ATT_SEPARATOR VALUE .  (20)

	.  reduce 20


state 61
	toc : TAG_OPEN TOC . TAG_CLOSE items CLOSE_TAG_OPEN TOC TAG_CLOSE  (21)

	TAG_CLOSE  shift 70
	.  error


state 62
	chapter : TAG_OPEN . CHAPTER id title TAG_CLOSE sections CLOSE_TAG_OPEN CHAPTER TAG_CLOSE  (28)

	CHAPTER  shift 71
	.  error


state 63
	chapters : chapter .  (26)

	.  reduce 26


state 64
	part_cont : toc chapters . lof_lot  (14)
	chapters : chapters . chapter  (27)
	lof_lot : .  (15)

	TAG_OPEN  shift 72
	CLOSE_TAG_OPEN  reduce 15

	chapter  goto 73
	lof  goto 74
	lot  goto 75
	lof_lot  goto 76


state 65
	part : TAG_OPEN PART id TAG_CLOSE part_cont CLOSE_TAG_OPEN . PART TAG_CLOSE  (13)

	PART  shift 77
	.  error


state 66
	part : TAG_OPEN PART id title TAG_CLOSE part_cont . CLOSE_TAG_OPEN PART TAG_CLOSE  (12)

	CLOSE_TAG_OPEN  shift 78
	.  error


state 67
	note : TAG_OPEN NOTE . TAG_CLOSE pcdata CLOSE_TAG_OPEN NOTE TAG_CLOSE  (57)

	TAG_CLOSE  shift 79
	.  error


state 68
	author_notes : TAG_OPEN AUTHOR_NOTES TAG_CLOSE notes CLOSE_TAG_OPEN . AUTHOR_NOTES TAG_CLOSE  (54)

	AUTHOR_NOTES  shift 80
	.  error


state 69
	notes : notes note .  (56)

	.  reduce 56


state 70
	toc : TAG_OPEN TOC TAG_CLOSE . items CLOSE_TAG_OPEN TOC TAG_CLOSE  (21)

	TAG_OPEN  shift 81
	.  error

	item  goto 82
	items  goto 83


state 71
	chapter : TAG_OPEN CHAPTER . id title TAG_CLOSE sections CLOSE_TAG_OPEN CHAPTER TAG_CLOSE  (28)

	ID  shift 37
	.  error

	id  goto 84


state 72
	chapter : TAG_OPEN . CHAPTER id title TAG_CLOSE sections CLOSE_TAG_OPEN CHAPTER TAG_CLOSE  (28)
	lof : TAG_OPEN . LOF TAG_CLOSE items CLOSE_TAG_OPEN LOF TAG_CLOSE  (51)
	lot : TAG_OPEN . LOT TAG_CLOSE items CLOSE_TAG_OPEN LOT TAG_CLOSE  (52)

	LOF  shift 85
	LOT  shift 86
	CHAPTER  shift 71
	.  error


state 73
	chapters : chapters chapter .  (27)

	.  reduce 27


state 74
	lof_lot : lof . lot  (16)
	lof_lot : lof .  (18)

	TAG_OPEN  shift 87
	CLOSE_TAG_OPEN  reduce 18

	lot  goto 88


state 75
	lof_lot : lot .  (17)

	.  reduce 17


state 76
	part_cont : toc chapters lof_lot .  (14)

	.  reduce 14


state 77
	part : TAG_OPEN PART id TAG_CLOSE part_cont CLOSE_TAG_OPEN PART . TAG_CLOSE  (13)

	TAG_CLOSE  shift 89
	.  error


state 78
	part : TAG_OPEN PART id title TAG_CLOSE part_cont CLOSE_TAG_OPEN . PART TAG_CLOSE  (12)

	PART  shift 90
	.  error


state 79
	note : TAG_OPEN NOTE TAG_CLOSE . pcdata CLOSE_TAG_OPEN NOTE TAG_CLOSE  (57)

	CONTENT  shift 32
	.  error

	pcdata  goto 91


state 80
	author_notes : TAG_OPEN AUTHOR_NOTES TAG_CLOSE notes CLOSE_TAG_OPEN AUTHOR_NOTES . TAG_CLOSE  (54)

	TAG_CLOSE  shift 92
	.  error


state 81
	item : TAG_OPEN . ITEM id_ref TAG_CLOSE pcdata CLOSE_TAG_OPEN ITEM TAG_CLOSE  (24)

	ITEM  shift 93
	.  error


state 82
	items : item .  (22)

	.  reduce 22


state 83
	toc : TAG_OPEN TOC TAG_CLOSE items . CLOSE_TAG_OPEN TOC TAG_CLOSE  (21)
	items : items . item  (23)

	TAG_OPEN  shift 81
	CLOSE_TAG_OPEN  shift 94
	.  error

	item  goto 95


state 84
	chapter : TAG_OPEN CHAPTER id . title TAG_CLOSE sections CLOSE_TAG_OPEN CHAPTER TAG_CLOSE  (28)

	TITLE  shift 43
	.  error

	title  goto 96


state 85
	lof : TAG_OPEN LOF . TAG_CLOSE items CLOSE_TAG_OPEN LOF TAG_CLOSE  (51)

	TAG_CLOSE  shift 97
	.  error


state 86
	lot : TAG_OPEN LOT . TAG_CLOSE items CLOSE_TAG_OPEN LOT TAG_CLOSE  (52)

	TAG_CLOSE  shift 98
	.  error


state 87
	lot : TAG_OPEN . LOT TAG_CLOSE items CLOSE_TAG_OPEN LOT TAG_CLOSE  (52)

	LOT  shift 86
	.  error


state 88
	lof_lot : lof lot .  (16)

	.  reduce 16


state 89
	part : TAG_OPEN PART id TAG_CLOSE part_cont CLOSE_TAG_OPEN PART TAG_CLOSE .  (13)

	.  reduce 13


state 90
	part : TAG_OPEN PART id title TAG_CLOSE part_cont CLOSE_TAG_OPEN PART . TAG_CLOSE  (12)

	TAG_CLOSE  shift 99
	.  error


state 91
	note : TAG_OPEN NOTE TAG_CLOSE pcdata . CLOSE_TAG_OPEN NOTE TAG_CLOSE  (57)

	CLOSE_TAG_OPEN  shift 100
	.  error


state 92
	author_notes : TAG_OPEN AUTHOR_NOTES TAG_CLOSE notes CLOSE_TAG_OPEN AUTHOR_NOTES TAG_CLOSE .  (54)

	.  reduce 54


state 93
	item : TAG_OPEN ITEM . id_ref TAG_CLOSE pcdata CLOSE_TAG_OPEN ITEM TAG_CLOSE  (24)

	ID  shift 101
	.  error

	id_ref  goto 102


state 94
	toc : TAG_OPEN TOC TAG_CLOSE items CLOSE_TAG_OPEN . TOC TAG_CLOSE  (21)

	TOC  shift 103
	.  error


state 95
	items : items item .  (23)

	.  reduce 23

